# RLMEval

./: .dockerignore  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
configs/benchmark/: debug.yaml  rlm25.yaml
configs/models/: gpt-4o-mini_greedy.yaml  gpt-4o_greedy.yaml  gpt-4o_sampling.yaml  kimina.yml  kiminacontext.yml
data/: 8_shot_proofnet_lean4.jsonl
scripts/: eval_statement_autoformalization.py  extract_benchmark.py  run.sh  run_trainer.sh  run_vllm.sh  vllm_serve.py
src/: deepspeedconf.json  inference.py  lean_pool_api.py  lean_pool_models.py  sfttrain.py  sfttrainconnf.py  train.py
src/rlm_eval/: utils.py
src/rlm_eval/data_processing/: blueprint_extractor.py  blueprint_lean_linking.py  lean_project_extractor.py  lean_utils.py
src/rlm_eval/metrics/: beq_plus.py
src/rlm_eval/tools/: repl_output_processing.py  string.py
tests/: test_lean_utils.py  test_postprocess.py  test_string.py
