[project]
name = "rlm-eval"
version = "0.1.0"
authors = []
description = "RLM: Evaluation of Autoformalization Methods on Research-Level Mathematics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "tqdm",
    "litellm>=1.54.1",
    "datasets",
    "jsonlines",
    "rich",
    "nltk",
    "diskcache",
    "leanblueprint>=0.0.15",
    "lean-interact>=0.5.3",
    "lean-dojo>=2.1.3",
    "networkx>=3.4.2",
    "trl>=0.17.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "wandb>=0.19.11",
    "deepspeed>=0.16.7",
    "evaluate>=0.4.3",
    "torch-xla[tpu]>=2.7.0"
]

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
optimum-tpu = { path = "../optimum-tpu" }
